# remote-industrial-job-monitoring-via-an-ui-app-at-edge-with-greengrass-v2

./: README.md
components/com.example.Publisher/aws-gg-deploy/: deploy-edge.sh  recipe-file-template.yaml
components/com.example.Publisher/src/: dummy_publisher.py
components/com.fileUploader/aws-gg-deploy/: deploy-edge.sh  recipe-file-template.yaml
components/com.fileUploader/src/jobdata/: .gitignore  MANIFEST.in  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
components/com.fileUploader/src/jobdata/jobdata/: __init__.py  _version.py  config.py  exceptions.py  run.py
components/com.fileUploader/src/jobdata/jobdata/api/: __init__.py  pickers.py  stream_manager_s3.py  uploadFile.py
components/com.fileUploader/src/jobdata/jobdata/api/stream_manager/: streammanagerclient.py
components/com.fileUploader/src/jobdata/jobdata/utils/: __init__.py  _logging.py  common.py
components/com.websocketApp/aws-gg-deploy/: deploy-edge.sh  recipe-file-template.yaml
components/com.websocketApp/src/: app.html  app.py  subscribe.py
components/edgeui/aws-gg-deploy/: deploy-edge.sh  package-lock.json  recipe-file-template.yaml
components/edgeui/src/edgeui/: package-lock.json  package.json
components/edgeui/src/edgeui/src/: App.js  Theme.js  index.css  index.js
components/edgeui/src/edgeui/src/pages/job/: Job.jsx  Socket.js
components/edgeui/src/edgeui/src/pages/upload/: FileUpload.jsx
greengrass_install_script/: greengrass_install.sh
jsonfile_sample/: blog-config_file.json
