[metadata]
name = jobdata
version = attr: jobdata.__version__
description = DESCRIPTION
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE.txt
classifiers =
    Framework :: Flask
    Intended Audience :: Customer Service
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
include_package_data = true
packages = find:
install_requires =
    boto3
    flask
    flask_sqlalchemy
    werkzeug==2.0.0
python_requires = >=3.6
zip_safe = false

[bdist_wheel]
universal = true

[build_sphinx]
all_files = 1
build_dir = docs/build
source_dir = docs/en/

[upload_sphinx]
upload_dir = docs/en/build/html

[isort]
force_single_line = true
line_length = 79

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
mypy_path = jobdata
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true

[mypy-tests.*]
disallow_untyped_defs = false

[pylint]
disable = C0301,C0302,E1101,R0902,R0903,W0201,W0212,W0603,W1203
ignore = data,docs
output-format = colorized

[tool.black]
line-length = 79

[tool:pytest]
testpaths = tests
python_files = *test_*.py
